# c-daw

./: CMakeLists.txt  README.md  clay-video-demo.c  examples.c  main.c
components/: cButton.c  cButtons.c  cDropdown.c
engine/: engine.c  engine.h
headers/: components.h  globals.c  globals.h  layouts.h
layouts/: layoutClip.c  layoutEditor.c  layoutMenuBar.c  layoutMidiEditor.c  layoutPlugins.c  layoutTimeline.c  layoutTrack.c
testing/: engine-test.c  examples.c  miniaudio-test.c
